# CMakeList.txt : CMake project for RecordSystem, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("RecordSystem")

# Add source to this project's executable.
add_executable (RecordSystem "src/RecordSystem.cpp" "src/RecordSystem.h")

# TODO: Add tests and install targets if needed.
